fixed some table layout issues

--- a/src/app/features/job-applications/components/job-applications-list/job-applications-list.component.scss
+++ b/src/app/features/job-applications/components/job-applications-list/job-applications-list.component.scss
@@ -20,14 +20,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: block;
-    width: 100%;
+    max-width: 250px;
 }
-
-.custom-table {
-    table-layout: fixed !important;
-    width: 100%;
-}
-
 
 .p-datatable-table {
     table-layout: fixed !important;
